--- a/tools/python/viewer.ui
+++ b/tools/python/viewer.ui
@@ -14,9 +14,6 @@
    <string>Scope Example</string>
   </property>
   <layout class="QGridLayout">
-   <item row="1" column="1">
-    <widget class="QLineEdit" name="channel"/>
-   </item>
    <item row="0" column="0" colspan="4">
     <widget class="QFrame" name="axes">
      <property name="frameShape">
@@ -43,13 +40,6 @@
      </property>
     </spacer>
    </item>
-   <item row="1" column="2">
-    <widget class="QPushButton" name="bConnect">
-     <property name="text">
-      <string>Connect</string>
-     </property>
-    </widget>
-   </item>
    <item row="1" column="0">
     <widget class="QLabel" name="textLabel1">
      <property name="text">
@@ -57,6 +47,16 @@
      </property>
      <property name="wordWrap">
       <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QComboBox" name="channel"/>
+   </item>
+   <item row="1" column="2">
+    <widget class="QPushButton" name="bConnect">
+     <property name="text">
+      <string>Connect</string>
      </property>
     </widget>
    </item>
