FA sniffer: Further work on display application
* Fix EOF exception handling from falib, catch EOF in viewer
* Configure signal handling in code rather than trying to use designer
* Implement scrolling buffer so that long waveforms display sensibly
* Code tidying

git-svn-id: svn+ssh://serv0002.cs.diamond.ac.uk/home/subversion/repos/controls/diamond/trunk/targetOS/drivers/pcie_sniffer@48106 e099a375-04f9-0310-9d5f-a741eaff62e1

--- a/tools/python/viewer.ui
+++ b/tools/python/viewer.ui
@@ -94,86 +94,5 @@
  <layoutdefault spacing="6" margin="11"/>
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
  <resources/>
- <connections>
-  <connection>
-   <sender>channel</sender>
-   <signal>currentIndexChanged(int)</signal>
-   <receiver>Scope</receiver>
-   <slot>channel_currentIndexChanged()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>20</x>
-     <y>20</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>20</x>
-     <y>20</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>rescale</sender>
-   <signal>clicked()</signal>
-   <receiver>Scope</receiver>
-   <slot>rescale_clicked()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>353</x>
-     <y>457</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>299</x>
-     <y>239</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>mode</sender>
-   <signal>currentIndexChanged(int)</signal>
-   <receiver>Scope</receiver>
-   <slot>mode_currentIndexChanged()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>20</x>
-     <y>20</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>20</x>
-     <y>20</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>run</sender>
-   <signal>clicked(bool)</signal>
-   <receiver>Scope</receiver>
-   <slot>run_clicked()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>538</x>
-     <y>457</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>328</x>
-     <y>239</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>timebase</sender>
-   <signal>currentIndexChanged(int)</signal>
-   <receiver>Scope</receiver>
-   <slot>timebase_currentIndexChanged()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>248</x>
-     <y>457</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>299</x>
-     <y>239</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
