FA sniffer: Enable FFT power display option (um^2/Hz)
git-svn-id: svn+ssh://serv0002.cs.diamond.ac.uk/home/subversion/repos/controls/diamond/trunk/targetOS/drivers/pcie_sniffer@50979 e099a375-04f9-0310-9d5f-a741eaff62e1

--- a/tools/python/viewer.ui
+++ b/tools/python/viewer.ui
@@ -124,7 +124,7 @@
      </layout>
     </item>
     <item>
-     <layout class="QHBoxLayout" name="bottom_row">
+     <layout class="QHBoxLayout" name="bottom">
       <item>
        <widget class="QCheckBox" name="autoscale">
         <property name="text">
@@ -157,6 +157,9 @@
          </size>
         </property>
        </spacer>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="bottom_row"/>
       </item>
      </layout>
     </item>
